--- a/FilmProject/src/main/resources/static/partials/nous.html
+++ b/FilmProject/src/main/resources/static/partials/nous.html
@@ -2,10 +2,92 @@
 			<div class="pi-container">
 				<div class="pi-section-w pi-section-white">
 					<div class="pi-section">
-						<h4 class="pi-has-bg pi-weight-700 pi-uppercase pi-letter-spacing pi-margin-bottom-25">à propos de nous</h4>
-						<div class="pi-img-w pi-img-round-corners pi-img-left" style="width: 240px"><img src="http://tong.visitkorea.or.kr/cms/resource/87/1735587_image2_1.JPG" alt=""></div>
-						<p class="pi-text-justify">Le Lambda est un cinéma indépendant qui a pour but la diffusion d'un cinéma de qualité. Nous dévelopons un regard ouvert sur le cinéma, qui permet la découverte des cinématographies étrangères, défend un cinéma novateur, tout en offrant la possibilité
-							de redécouvrir des films anciens sur grand écran. Attaché à la liberté de la création cinématographique et à son indépendance, Le Lambda se veut ausi un lieu de rencontres, d'échanges et de débats.</p>
+						<div class="main-block blog-item">
+            <div class="blog-content">
+                <p>Every developer has one of the most difficult questions posed after completing an excellent Android app: which App Store will generate the most money? Most will opt for the $25 route of Google Play as it has one of the most guaranteed audiences. However, there are also other options that may come up.</p>
+<h2>Best App Store Alternative for Android</h2>
+<h3>1. SlideME</h3>
+<h3>2.&nbsp;Amazon Appstore</h3>
+<h3>3.&nbsp;1Mobile Market</h3>
+<h3>4.&nbsp;<span class="sumo_twilighter_highlighted twilighter-35075871" style="background-color: rgba(56, 56, 56, 0.15);">Samsung Galaxy Apps<span class="sumo_twilighter_shares" style="visibility: visible;">2</span></span></h3>
+<h3>5.&nbsp;Mobile9</h3>
+<h3>6.&nbsp;Opera Mobile Store</h3>
+<h3>7.&nbsp;Mobango</h3>
+<h3>8.&nbsp;Soc.io Mall</h3>
+<h3>9.&nbsp;F-droid</h3>
+<h3>10.&nbsp;GetJar</h3>
+<p>The biggest issue with choosing this standard option is that the competition is fierce. Below is listed some of the best alternative Android App Stores around so that you will get access to more localized and specialized customer audiences. <br>Besides rarely charging for listing an app there are several more advantages for choosing an alternative to Google Play:</p>
+<ul>
+<li>More options for promotion<br>In our list of app stores for Android, you can find many platforms that can give a boost for the app by featuring it as an app of the day or provide app owner with some money-saving offers for advertising.</li>
+<li>Relevant recommendations<br>Other Android app stores offer a list of recommended apps that are not displayed on Google Play top ten charts.</li>
+<li>Curated list<br>Some of the Play store alternatives have a very narrow focus and a small selection of apps that have been filtered by topic, purpose, quality, age, etc.</li>
+<li>Local portals<br>Some of the different app stores cater to countries and offer localized apps that are not presented somewhere else.</li>
+</ul>
+<h2>SlideME</h2>
+<p>As a long-term player in the app store business, it has been running even longer than Google Play, SlideME is the most regularly found app store on Android devices after the main competitor.</p>
+<span class="sumo_twilighter_highlighted twilighter-109a247b" style="background-color: rgba(56, 56, 56, 0.15); cursor: inherit;"></span><p><span class="sumo_twilighter_highlighted twilighter-109a247b" style="background-color: rgba(56, 56, 56, 0.15); cursor: inherit;">Biggest Advantage: Payment can be made via PayPal, and the app store only charges 20% for each purchase of your app.</span></p><span class="sumo_twilighter_highlighted twilighter-109a247b" style="background-color: rgba(56, 56, 56, 0.15); cursor: inherit;">
+</span><p><span class="sumo_twilighter_highlighted twilighter-109a247b" style="background-color: rgba(56, 56, 56, 0.15); cursor: inherit;"></span><a href="http://slideme.org/" target="_blank" rel="nofollow"><span class="sumo_twilighter_highlighted twilighter-109a247b" style="background-color: rgba(56, 56, 56, 0.15); cursor: inherit;">slideme.org<span class="sumo_twilighter_shares" style="visibility: visible;">1</span></span></a></p>
+<h2>Amazon Appstore</h2>
+<p>While not as old as Google Play or SlideME, the Amazon Appstore is one of their most successful competitors. With the introduction of Kindle Fire, the Fire Phone and a range of Android devices running Fire OS, there is a growing market for apps sold through Amazon.</p>
+<p>There are some issues with running apps through the Fire OS but the majority of developers only need a short time to get their app ready for Amazon. In fact, many Android apps already run perfectly fine on Fire OS.</p>
+<p>Biggest Advantages: It is possible to publish HTML5 and web apps on the Amazon Appstore. It is a growing marketplace with hundreds of thousands of apps and a large customer base. The Amazon Appstore is also remarkably easy to navigate for all developers.</p>
+<p><a href="http://www.amazon.com/gp/mas/get-appstore/android/" target="_blank" rel="nofollow">amazon.com/mobile-apps</a></p>
+<h2>1Mobile Market</h2>
+<p>For a different approach to generating a successful app is focusing only on the popularity of the app. 1Mobile Market is only for free apps so it is a great place to upload an app to test it out on the market.</p>
+<p>Read also: <a title="Cost to develop an app" href="../../../../blog/marketing/cost-app-development/">Cost to develop an app</a></p>
+<p>The marketplace itself costs nothing to upload your app but this doesn’t mean it is full of terrible apps. Each app has to pass through a selection process to check for malware and to keep a high quality of 1Mobile Market apps.</p>
+<p>Biggest Advantage: A useful recommendation system based on preferences means that apps can become successful very quickly. With over 100 million installs and hundreds and thousands of apps listed it is a great place to upload your app.</p>
+<p><a href="http://market.1mobile.com/" target="_blank" rel="nofollow">mobile.1mobile.com</a></p>
+<p><img src="../../../../images/articles/source/a_shoppingbag.jpg" alt="Best app stores for Android" width="600" height="336"></p>
+<h2>Samsung Galaxy Apps</h2>
+<p>From the company that manufacturers the most Android phones it is no surprise that Samsung has developed their own app store. Compared to other app stores, Samsung Galaxy Apps has a relatively small number of apps but this can be a positive for apps to stand out.</p>
+<p>Biggest Advantage: Every Samsung Galaxy device has the app store installed so there is an immediate and large customer base.</p>
+<h2>Mobile9</h2>
+<p>This app store can be compared to a social network. Mobile9 has millions of active users and each one has the ability to comment on and share their installed apps. Publishing an app is free and with such a wide user base it can mean great results for a well-developed app.</p>
+<p>Biggest Advantage: There is a huge download rate with one of the smallest number of developers; getting noticed with Mobile9 can be relatively easy.</p>
+<p><a href="http://www.mobile9.com/" target="_blank" rel="nofollow">mobile9.com</a></p>
+<h2>Opera Mobile Store</h2>
+<p>With a direct link with Yandex, Opera Mobile Store has access to almost the entire Russian app customer market by all their apps being present in the Yandex App Store. The store has over 100 million visits every single month, and there are over a million downloads each day.</p>
+<p>Biggest Advantage: To get access to this huge audience is completely free. Opera Mobile Store, however, does take 30% of any sales, but it is worth it for the sales this app store generates.</p>
+<p><a href="http://html5.oms.apps.opera.com/" target="_blank" rel="nofollow">apps.opera.com</a></p>
+<h2>Mobango</h2>
+<p>A base of millions of customers and thousands of downloads per day; Mobango is a forerunner for a Google Play alternative. It has a relatively small app total in its store so it isn’t too difficult to become one of its top downloaded apps.</p>
+<p>Biggest Advantage: Uploading your app is completely free and no percentage is taken.</p>
+<p><a href="http://www.mobango.com/" target="_blank" rel="nofollow">mobango.com</a></p>
+<h2>Soc.io Mall</h2>
+<p>This is a more all-encompassing marketplace. Soc.io Mall presents users with ebooks, games as well as apps. This will soon be expanded to music, audiobooks and videos. The more varied approach means that there is less completion for the app customers.</p>
+<p>READ ALSO: <a href="../../../../blog/marketing/app-development-cost-differ/">Mobile app costs</a></p>
+<p>Biggest Advantage: To upload an app is free with access to their small but dedicated customer base and Soc.io Mall also offers only a 20% fee for any sale.</p>
+<p><a href="http://soc.io/apps" target="_blank" rel="nofollow">soc.io</a></p>
+<h2>F-droid</h2>
+<p>For a more open approach to apps, one of the best alternatives is F-droid. The entire site and app store is run by volunteers and relies on donations. It only allows free apps and has a policy of not pushing apps that include paid add-ons or adverts.</p>
+<p>Biggest Advantage: With a strong customer base and absolutely no costs there is nothing to lose by uploading your app to this store and testing out its popularity.</p>
+<p><a href="https://f-droid.org/" target="_blank" rel="nofollow">f-droid.org</a></p>
+<h2>GetJar</h2>
+<p>This app store actively encourages their developers to use their freemium model with included adverts and in-app currency. GetJar Gold is one of the largest virtual currencies in use and is available to millions of users.</p>
+<p>Biggest Advantages: 30 million users and a great recommendation service that allows for quick discovery of new apps.</p>
+<p><a href="http://www.getjar.com/" target="_blank" rel="nofollow">getjar.com</a></p>
+<h2>Takeaway</h2>
+<p>Choosing the best alternative Android market may seem to be a tough task. Every store has its pros and cons. You can find free app store for Android or the one that charges a fee, some of them a very specific, others vice versa very popular and highly competitive.<br>Neither of these best free app markets can 100 percent replace a Google Play, they can become an additional channel to drive more downloads.</p>
+            </div>
+
+            <div class="share-block">
+    <h4 class="share-block-heading">Share this</h4>
+    <div class="blog-soc-cover cover">
+        <a class="blog-share-tw" href="http://twitter.com/share?&amp;url=https://theappsolutions.com/blog/marketing/alternative-android-app-stores/"><svg id="SvgjsSvg1010" xmlns="http://www.w3.org/2000/svg" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:svgjs="http://svgjs.com/svgjs" width="32" height="27"><defs id="SvgjsDefs1011"></defs><path id="SvgjsPath1012" d="M860 3630.16C858.82 3630.69 857.56 3631.0499999999997 856.23 3631.22C857.59 3630.3799999999997 858.63 3629.06 859.12 3627.49C857.85 3628.2599999999998 856.44 3628.8199999999997 854.95 3629.12C853.75 3627.8199999999997 852.0400000000001 3627 850.1500000000001 3627C846.5300000000001 3627 843.5900000000001 3630.01 843.5900000000001 3633.73C843.5900000000001 3634.26 843.6500000000001 3634.77 843.7600000000001 3635.26C838.3000000000001 3634.98 833.4700000000001 3632.3100000000004 830.2300000000001 3628.23C829.6600000000001 3629.23 829.3400000000001 3630.38 829.3400000000001 3631.62C829.3400000000001 3633.95 830.5000000000001 3636.0099999999998 832.2600000000001 3637.22C831.19 3637.1899999999996 830.1700000000001 3636.8799999999997 829.2800000000001 3636.3799999999997L829.2800000000001 3636.4599999999996C829.2800000000001 3639.7299999999996 831.5500000000001 3642.4499999999994 834.5500000000001 3643.0599999999995C834.0000000000001 3643.2199999999993 833.4200000000001 3643.2999999999993 832.82 3643.2999999999993C832.4000000000001 3643.2999999999993 831.99 3643.2599999999993 831.59 3643.1799999999994C832.4200000000001 3645.8499999999995 834.85 3647.7999999999993 837.72 3647.8499999999995C835.47 3649.6599999999994 832.64 3650.7399999999993 829.57 3650.7399999999993C829.0400000000001 3650.7399999999993 828.5100000000001 3650.709999999999 828 3650.6399999999994C830.91 3652.5499999999993 834.36 3653.6699999999996 838.06 3653.6699999999996C850.14 3653.6699999999996 856.7399999999999 3643.4099999999994 856.7399999999999 3634.5099999999998C856.7399999999999 3634.22 856.7399999999999 3633.93 856.7299999999999 3633.64C858.0099999999999 3632.69 859.1199999999999 3631.5099999999998 859.9999999999999 3630.16 " fill="#4baaf4" fill-opacity="1" transform="matrix(1,0,0,1,-828,-3627)"></path></svg></a>
+        <a class="blog-share-fb" href="http://www.facebook.com/sharer.php?u=https://theappsolutions.com/blog/marketing/alternative-android-app-stores/&amp;t=10 App Store Alternatives - Google Play alternatives"><svg id="SvgjsSvg1016" xmlns="http://www.w3.org/2000/svg" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:svgjs="http://svgjs.com/svgjs" width="17" height="32"><defs id="SvgjsDefs1017"></defs><path id="SvgjsPath1018" d="M962.79 3656L962.79 3641.4L967.6899999999999 3641.4L968.42 3635.71L962.79 3635.71L962.79 3632.08C962.79 3630.44 963.24 3629.31 965.61 3629.31L968.62 3629.31L968.62 3624.22C968.1 3624.1499999999996 966.3100000000001 3624 964.23 3624C959.89 3624 956.91 3626.65 956.91 3631.52L956.91 3635.71L952 3635.71L952 3641.4L956.91 3641.4L956.91 3656Z " fill="#4560a2" fill-opacity="1" transform="matrix(1,0,0,1,-952,-3624)"></path></svg></a>
+        <a class="blog-share-in" href="http://www.linkedin.com/shareArticle?mini=true&amp;url=https://theappsolutions.com/blog/marketing/alternative-android-app-stores/&amp;title=10 App Store Alternatives - Google Play alternatives&amp;summary=10 App Store Alternatives - Google Play alternatives&amp;source=The App Solutions"><svg id="SvgjsSvg1013" xmlns="http://www.w3.org/2000/svg" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:svgjs="http://svgjs.com/svgjs" width="32" height="29"><defs id="SvgjsDefs1014"></defs><path id="SvgjsPath1015" d="M1084.93 3654.8L1084.93 3644.6800000000003C1084.93 3642.03 1083.8200000000002 3640.2200000000003 1081.39 3640.2200000000003C1079.5300000000002 3640.2200000000003 1078.49 3641.44 1078.01 3642.61C1077.83 3643.04 1077.86 3643.6200000000003 1077.86 3644.21L1077.86 3654.8L1070.85 3654.8C1070.85 3654.8 1070.9399999999998 3636.8700000000003 1070.85 3635.2400000000002L1077.86 3635.2400000000002L1077.86 3638.3100000000004C1078.27 3636.9600000000005 1080.51 3635.05 1084.08 3635.05C1088.52 3635.05 1092 3637.86 1092 3643.92L1092 3654.8ZM1063.72 3632.79C1061.46 3632.79 1060 3631.29 1060 3629.4C1060 3627.46 1061.51 3626 1063.81 3626C1066.11 3626 1067.53 3627.46 1067.57 3629.39C1067.57 3631.29 1066.11 3632.79 1063.77 3632.79ZM1060.81 3635.24L1060.81 3654.7999999999997L1067.04 3654.7999999999997L1067.04 3635.24Z " fill="#0074b8" fill-opacity="1" transform="matrix(1,0,0,1,-1060,-3626)"></path></svg></a>
+    </div>
+</div>
+                            <div class="author-block cover m-b60 m-t60">
+                    <div class="author-photo cut inline-block" style="background-image: url('/images/user/avatars/3/avatar_12.png');"></div>
+                    <div class="author-details">
+                        <span class="h4 author-name">Artem</span>
+                        <p class="author-position">Marketing Expert</p>
+                    </div>
+                </div>
+            
+        </div>
 					</div>
 				</div>
 			</div>
