--- a/FilmProject/src/main/resources/static/partials/login.html
+++ b/FilmProject/src/main/resources/static/partials/login.html
@@ -2,46 +2,45 @@
 			<div class="pi-container">
 				<div class="pi-section-w pi-section-white">
 					<div class="pi-section">
-						<h4 class="pi-has-bg pi-weight-700 pi-uppercase pi-letter-spacing pi-margin-bottom-25">Connexion</h4>
-						<form role="form">
-							<div class="pi-row pi-grid-small-margins">
-								<div class="pi-col-sm-4 pi-col-sm-offset-4">
-									<div class="form-group">
-										<label for="username">Nom d'utilisateur</label>
-										<div class="pi-input-with-icon">
-											<div class="pi-input-icon"><i class="icon-user"></i></div>
-											<input type="text" class="form-control" id="username" placeholder="Nom d'utilisateur" ng-model="username">
-										</div>
-									</div>
-								</div>
-								<div class="pi-col-sm-4 pi-col-sm-offset-4">
-									<div class="form-group">
-										<label for="password">Mot de Passe</label>
-										<div class="pi-input-with-icon">
-											<div class="pi-input-icon"><i class="icon-lock"></i></div>
-											<input type="password" class="form-control" id="password" placeholder="Mot de Passe" ng-model="password">
-										</div>
-									</div>
-								</div>
-							</div>
-							<div class="pi-row">
-								<div class="pi-col-sm-12">
-									<p class="pi-center">
-										<button type="submit" ng-click="login()" class="btn pi-btn-base pi-btn-big pi-uppercase pi-weight-700 pi-letter-spacing"><i class="icon-check pi-icon-left"></i>Connexion</button>
-									</p>
-								</div>
-							</div>
-							<div class="pi-row">
-								<div class="pi-col-sm-12">
-									<p class="pi-center">
-										<a href="#">Mot de Passe oublié?</a>
-										{{date}}
-									</p>
-								</div>
-							</div>
-						</form>
+						<h3>The Ultimate App Store List</h3>
+						<p>There&#8217;s more to app stores than Google Play for Android and Apple&#8217;s iTunes and App Store. The obvious names are the Amazon App Store and Chinese giant Baidu, but there are more alternatives still.</p>
+<p>If you want to increase the reach of your app to audiences abroad, or if your idea has a specific niche audience, then you might find what you need in our big list of app stores, but don’t forget the top three – competition is fierce, but it’s important to be part of it. You can find more app distribution services and channels in our <strong><a href="http://www.businessofapps.com/user-acquisition">user acquisition directory</a></strong>.</p>
+<p>From country- to platform-specific storefronts, we’ve collected a list of all the places your mobile app can be downloaded onto a device.</p>
+<p>The guide is divided in the following sections:</p>
+<ul>
+<li><a href="#1">Android App Stores</a></li>
+<li><a href="#2">Cross-platform App Stores</a></li>
+<li><a href="#3">iOS App Stores</a></li>
+<li><a href="#4">BlackBerry App Stores</a></li>
+<li><a href="#5">Manufacturer-specific App Stores</a></li>
+<li><a href="#6">Chinese App Stores</a></li>
+<li><a href="#7">Operator and Country-Specific Stores</a></li>
+</ul>
+<p>We begin with the Android-specific stores.</p>
+<h2>Android App Stores</h2>
+<p>The freedom given to developers for the Android platform means many app stores have been created for it, with some focusing on specific niches or languages and others boasting better algorithms and app discovery engines. As of July 2015, <a href="http://www.statista.com/statistics/276623/number-of-apps-available-in-leading-app-stores/">Google Play gave Android users a choice of 1.6 million apps</a>, with Apple’s App Store a close second with 1.5 million apps – <a href="http://www.statista.com/topics/1002/mobile-app-usage/">according to this report by Statista.com</a>, over 100 billion apps have been downloaded from the latter alone.</p>
+<p><a name="1"></a></p>
+<h2>Android App Stores</h2>
+<p><strong><a href="http://www.androidtapp.com/">Android Tapp</a> </strong>&#8211; Highly curated Android-only app store for paid phone and tablet apps.</p>
+<p><strong><a href="http://www.androidfreeware.net/">Android Freeware</a> </strong>&#8211; Does what its name implies: hosts free Android-only applications. <strong> </strong></p>
+<p><strong><a href="http://digitalturbine.com/products/discover/">Digital Turbine</a></strong> – Not an appstore but a search engine specific for apps that applies machine learning and and stats analysis to give you tailored suggestions app suggestions.</p>
+<p><strong><a href="http://www.codengo.com/">CodeNgo</a></strong> – Fill in a single form to submit your app to more than 30 stores, from Google Play to Amazon, Samsung and more.</p>
+<p><strong><a href="http://www.appbrain.com/">AppBrain</a></strong> – Android-specific app market which, as well as aiding discovery of apps in multiple stores (including Google Play) also lets users organise and share their applications.</p>
+<p><em><strong>Some of AppBrain&#8217;s offerings</strong></em></p>
+<p><img class="size-full wp-image-9617 alignnone" src="http://www.businessofapps.com/wp-content/uploads/2016/10/acde4c04fa5dc81a72feae903db0cbdb_AppBrain700.jpg" alt="AppBrain700" width="700" height="199" srcset="http://www.businessofapps.com/wp-content/uploads/2016/10/acde4c04fa5dc81a72feae903db0cbdb_AppBrain700.jpg 700w, http://www.businessofapps.com/wp-content/uploads/2016/10/acde4c04fa5dc81a72feae903db0cbdb_AppBrain700-300x85.jpg 300w, http://www.businessofapps.com/wp-content/uploads/2016/10/acde4c04fa5dc81a72feae903db0cbdb_AppBrain700-625x178.jpg 625w, http://www.businessofapps.com/wp-content/uploads/2016/10/acde4c04fa5dc81a72feae903db0cbdb_AppBrain700-291x83.jpg 291w, http://www.businessofapps.com/wp-content/uploads/2016/10/acde4c04fa5dc81a72feae903db0cbdb_AppBrain700-225x64.jpg 225w" sizes="(max-width: 700px) 100vw, 700px" /></p>
+<p><em>Source: appbrains.com</em></p>
+<p><strong><a href="http://slideme.org/">SlideMe </a></strong>– A curated app store with the specific target of niche markets, basing its targeting on geographic location, device and payment type, among other metrics. Tries to fill the gaps where Google Play doesn&#8217;t reach.</p>
+<p><strong><a href="http://appslib.com/">AppsLib</a></strong> – Android-tablet-specific marketplace, it&#8217;s been inactive for a while but has 38,000 plus apps listed to it.</p>
+<p><strong><a href="http://soc.io/">Soc.io</a></strong> – Apps and ebooks, with music coming soon, are all to be found on this Android marketplace. Bills itself as an Android ‘mobile mall’. Also has its own e-Book reader.</p>
+<p><strong><a href="http://www.1mobile.com/">1Mobile</a></strong> – Has increased its apps from 60,000 to 800,00+ in the last three years. Focused on games, Android only.</p>
+<p><strong><a href="https://shield.nvidia.com/games/android">Nvidia Shield</a></strong> – A highly curated Android app store by Nvidia, covers mostly games but also entertainment apps for Android TV.</p>
+<p><strong><a href="http://www.androidpit.com/">AndroidPit</a></strong> – Not just an app store but a good source of app reviews and information. Also has a curated section with apps selected by the Berlin-based editorial team.</p>
+<p><strong><a href="http://www.mobiles24.co/">mobiles24</a> </strong>&#8211; Android and Java only, but should is &#8220;coming soon&#8221; to the App Store, it is both an app and a content discovery engine.<strong> </strong></p>
+<p><strong><a href="https://www.aptoide.com/">Aptoide</a> </strong>&#8211; Lets you create an app store within their own storefront. Currently hosts 199k stores and over 750,000 apps.</p>
+<p><em><strong>Some of Aptoide&#8217;s clients</strong></em></p>
+<p><img class="size-full wp-image-9618 alignnone" src="http://www.businessofapps.com/wp-content/uploads/2016/10/0ed69bb4b0335edb6f1d08e24c2e6b25_Aptoide-Clients700.jpg" alt="Aptoide Clients700" width="700" height="352" srcset="http://www.businessofapps.com/wp-content/uploads/2016/10/0ed69bb4b0335edb6f1d08e24c2e6b25_Aptoide-Clients700.jpg 700w, http://www.businessofapps.com/wp-content/uploads/2016/10/0ed69bb4b0335edb6f1d08e24c2e6b25_Aptoide-Clients700-300x151.jpg 300w, http://www.businessofapps.com/wp-content/uploads/2016/10/0ed69bb4b0335edb6f1d08e24c2e6b25_Aptoide-Clients700-625x314.jpg 625w, http://www.businessofapps.com/wp-content/uploads/2016/10/0ed69bb4b0335edb6f1d08e24c2e6b25_Aptoide-Clients700-291x146.jpg 291w, http://www.businessofapps.com/wp-content/uploads/2016/10/0ed69bb4b0335edb6f1d08e24c2e6b25_Aptoide-Clients700-225x113.jpg 225w" sizes="(max-width: 700px) 100vw, 700px" /></p>
+<p><em>Source: Aptoide.com</em></p>
 					</div>
 				</div>
 			</div>
 		</div>
-	</div>
